--- a/symmetrica/index.html
+++ b/symmetrica/index.html
@@ -33,6 +33,93 @@ title: 'Symmetrica'
   This website is a catalogue of named objects and their properties. You can click on any image to run it in LifeViewer.
 </p>
 
+<!--
+  Sort by properties (size, byzantine-based, titan-based, etc.), not alphabetical order
+  Add newly discovered patterns
+
+  CATEGORIES
+  Still lifes
+  - Block
+  - Carrier
+  - Feast
+  - Shell
+  - Steeple
+  
+  Oscillators
+  - Beacon
+  - Beekeeper
+  - Big insect
+  - Blinker
+  - Boomerang
+  - Boron
+  - Bowtie
+  - Dinner
+  - Double boomerang
+  - Double flare
+  - Flare
+  - Flint and steel
+  - Insect
+  - Marathon
+  - Moose
+  - Nova
+  - Pinwheel
+  - Quartet
+  - Shellshock p4
+  - Shellshock p19
+  - Staircase
+  - Victory
+  
+  Spaceships
+  - Orthodox 1 [formerly symmetrical byzantine ship]
+  - Orthodox 2 [formerly asymmetrical byzantine ship]
+  - Cat
+  - Cyclops
+  - Glidermaker
+  - Goalpost
+  - Half-squid
+  - Hexadecimal 1
+  - Hexadecimal 2
+  - Moonshine
+  - Owl
+  - Schooner
+  - Sea urchin
+  - Slowpoke
+  - Squid
+  - Titan
+  - Transformers
+  - Trawler
+  - Tugboat
+  - Turbulence
+  - Varangian guard
+  
+  Puffers
+  - Arcade
+  - Byzantine
+  - Hyperion
+  - Mason
+  - Parade
+  - Plow
+  - Voyager
+
+  Rakes [use different naming scheme, include smaller versions]
+  - Rake 1
+  - Rake 2
+  - Rake 3
+  - Rake 4
+  - Schooner rake 1
+  - Schooner rake 2
+
+  Other
+  - Beehive spark
+  - Chicken wire superstring
+  - Chip
+  - Dot fuse
+  - Epsilon fuse [?]
+  - Table
+  - Tango
+  - Tub spark
+-->
+
 <h3 id="arcade">Arcade</h3>
 <ul>
   <li>Period-48 puffer</li>
