--- a/symmetrica/index.html
+++ b/symmetrica/index.html
@@ -34,6 +34,12 @@ title: 'Symmetrica'
 </p>
 
 <!--
+  TODO:
+  - finish organizing old discoveries
+  - add new discoveries
+  - add links when helpful
+  - ensure that punctuation, use of numerals is consistent
+
   Sort by properties (size, byzantine-based, titan-based, etc.), not alphabetical order
   Add newly discovered patterns
 
