--- a/index.html
+++ b/index.html
@@ -5,10 +5,7 @@ no_heading: true
 ---
 
 <p>
-  Ahoy!
-</p>
-<p>
-  I'm a young man from upstate New York currently studying computer 
+  Hi! I'm a young man from upstate New York currently studying computer 
   science and mathematics at the University of Massachusetts Amherst.
   My hobbies include programming, mathematics, worldbuilding/conlanging, 
   and writing music. My online alias is "UnaryPlus," a reference to 
