--- a/index.html
+++ b/index.html
@@ -5,15 +5,7 @@ no_heading: true
 ---
 
 <p>
-  Hi! I'm a young man from upstate New York currently studying computer 
-  science and mathematics at the University of Massachusetts Amherst.
-  My hobbies include programming, mathematics, worldbuilding/conlanging, 
-  and writing music. My online alias is "UnaryPlus," a reference to 
-  the most useless C operator. This website is a collection of my projects: 
-  games and animations I've created over the years (some as long ago as 
-  8th grade), articles on mathematics and music theory, programming languages, 
-  and some other things. I'm currently working on a conlang called Kalvaszti 
-  &mdash; a project I hope to finish within a year or two.
+  Welcome to my website. I come from upstate New York and am currently studying mathematics and computer science at the University of Massachusetts Amherst. Some of my online accounts are called "UnaryPlus", which refers to the positive sign in expressions like "+1". This website is a collection of my projects: games and animations I've created over the years (some as long ago as 8th grade), articles on mathematics and music theory, esoteric programming languages, and some other things. I'm currently working on a constructed language called Kalvaszti, a project I hope to finish within a year or two.
 
 <div class="image-row">
   <a href="https://github.com/UnaryPlus"><img alt="Github" src="/assets/images/github.png" height="75px"></a>
@@ -22,8 +14,5 @@ no_heading: true
 </div>
 
 <p>
-  I have experience in many programming languages, including Javascript,
-  Python, Typescript, C, and Java. My favorite language is Haskell, and I
-  have <a href="https://hackage.haskell.org/user/OwenBechtel">several packages</a>
-  published on Hackage, the central Haskell package archive.
+  I have experience in many programming languages, including Javascript, Python, Typescript, C, and Java. My favorite language is Haskell, and I have <a href="https://hackage.haskell.org/user/OwenBechtel">several packages</a> published on Hackage, the central Haskell package archive.
 </p>
